@@ -10,6 +10,7 @@ apm-server:
   #max_header_bytes:
   #read_timeout: 2s
   #write_timeout: 2s
+  #shutdown_timeout: 5s
 
   # Authorization token to be checked. If a token is set here the agents must
   # send their token in the following format: Authorization: Bearer <secret-token>
